exports[`<PSEHeader /> render matches snapshot when header store is not initialized 1`] = `
<header
  className="fnnav pse"
  role="banner">
  <div
    className="fnnav__mainbar ">
    <div
      className="container">
      <div
        className="fnnav__header">
        <div
          className="fnnav__brand">
          <a
            className="logo-home-link"
            href="/"
            onClick={[Function anonymous]}>
            <img
              alt="FirstNet Logo"
              src="/images/logo-FirstNet-local-control.svg" />
            <span
              className="sr-only">
              Go Home
            </span>
          </a>
        </div>
        <button
          aria-expanded={undefined}
          aria-haspopup="true"
          className="navbar-toggle"
          onClick={[Function anonymous]}
          type="button">
          <span
            className="sr-only">
            Toggle navigation
          </span>
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
        </button>
      </div>
      <nav
        aria-label="Main Menu"
        id="main-menu">
        <ul
          className="fnnav__main">
          <li
            className="mainnav-item yellow"
            role="presentation">
            <button
              aria-expanded={undefined}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Profile Menu
              </span>
            </button>
            <a
              className="deaden"
              href="#profile"
              id="pse-profile">
              <div
                className="multi-line-item">
                <div
                  className="profile-display">
                  <i
                    aria-hidden="true"
                    className="icon-profile" />
                  undefined undefined
                </div>
              </div>
            </a>
            <ul
              aria-labelledby="pse-profile"
              className="collapse "
              id="pse-profile-nav">
              <li
                role="presentation" />
            </ul>
          </li>
          <li
            className="mainnav-item desktop-textlink"
            id="hdr-network-status"
            role="presentation">
            <a
              className={undefined}
              href="/network-status"
              id="linkBtn-networkStatus"
              onClick={[Function anonymous]}
              style={undefined}>
              Network Status
            </a>
          </li>
          <li
            className="mainnav-item grey">
            <button
              aria-expanded={undefined}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Help Menu
              </span>
            </button>
            <a
              className="deaden"
              href="/manage-profile"
              id="pse-profile">
              <i
                aria-hidden="true"
                className="icon-help" />
               Help
            </a>
            <ul
              aria-labelledby="linkBtn-admin"
              className="collapse "
              id="pse-help-menu">
              <li>
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li>
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us FeedBack
                </a>
              </li>
              <li>
                <a
                  href="tel:undefined">
                  <div
                    className="multi-line-item">
                    AT&T Customer Service: 
                    <phone>
                      <i
                        aria-hidden="true"
                        className="icon-phone-number" />
                    </phone>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            className="mainnav-item grey logout"
            role="presentation">
            <a
              href="#"
              onClick={[Function anonymous]}>
              <i
                aria-hidden="true"
                className="icon-logout" />
              Log Out
            </a>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to User Dashboard"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="profile-header-dropdown"
              type="button">
              <i
                className="icon-profile" />
            </button>
            <ul
              aria-labelledby="profile-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-profile-nav"
              role="menu">
              <li
                className="desktop-profile-display"
                role="presentation">
                <a
                  className="deaden"
                  href="#profile"
                  id="pse-profile-desktop"
                  tabIndex="-1">
                  <div
                    className="multi-line-item">
                    <div
                      className="profile-display">
                      <i
                        aria-hidden="true"
                        className="icon-profile" />
                      undefined undefined
                    </div>
                  </div>
                </a>
              </li>
              <li
                role="presentation" />
              <li
                role="presentation">
                <a
                  href="#"
                  onClick={[Function anonymous]}>
                  <i
                    aria-hidden="true"
                    className="icon-logout" />
                  Log Out
                </a>
              </li>
            </ul>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to Help Center"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="help-header-dropdown"
              type="button">
              <i
                className="icon-help" />
            </button>
            <ul
              aria-labelledby="help-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-help-nav"
              role="menu">
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us Feedback
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className="tel-cell"
                  href="tel:undefined">
                  AT&T Customer Service: 
                  <br />
                  <span>
                    <i
                      aria-hidden="true"
                      className="icon-phone-number" />
                  </span>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="pageMask hidden-xs hidden-md hidden-lg"
    onClick={[Function anonymous]} />
</header>
`;

exports[`<PSEHeader /> render matches snapshot when menu is closed 1`] = `
<header
  className="fnnav pse"
  role="banner">
  <div
    className="fnnav__mainbar ">
    <div
      className="container">
      <div
        className="fnnav__header">
        <div
          className="fnnav__brand">
          <a
            className="logo-home-link"
            href="/"
            onClick={[Function anonymous]}>
            <img
              alt="FirstNet Logo"
              src="/images/logo-FirstNet-local-control.svg" />
            <span
              className="sr-only">
              Go Home
            </span>
          </a>
        </div>
        <button
          aria-expanded={false}
          aria-haspopup="true"
          className="navbar-toggle"
          onClick={[Function anonymous]}
          type="button">
          <span
            className="sr-only">
            Toggle navigation
          </span>
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
        </button>
      </div>
      <nav
        aria-label="Main Menu"
        id="main-menu">
        <ul
          className="fnnav__main">
          <li
            className="mainnav-item yellow"
            role="presentation">
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Profile Menu
              </span>
            </button>
            <a
              className="deaden"
              href="#profile"
              id="pse-profile">
              <div
                className="multi-line-item">
                <div
                  className="profile-display">
                  <i
                    aria-hidden="true"
                    className="icon-profile" />
                  undefined undefined
                </div>
              </div>
            </a>
            <ul
              aria-labelledby="pse-profile"
              className="collapse "
              id="pse-profile-nav">
              <li
                role="presentation" />
            </ul>
          </li>
          <li
            className="mainnav-item desktop-textlink"
            id="hdr-network-status"
            role="presentation">
            <a
              className={undefined}
              href="/network-status"
              id="linkBtn-networkStatus"
              onClick={[Function anonymous]}
              style={undefined}>
              Network Status
            </a>
          </li>
          <li
            className="mainnav-item grey">
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Help Menu
              </span>
            </button>
            <a
              className="deaden"
              href="/manage-profile"
              id="pse-profile">
              <i
                aria-hidden="true"
                className="icon-help" />
               Help
            </a>
            <ul
              aria-labelledby="linkBtn-admin"
              className="collapse "
              id="pse-help-menu">
              <li>
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li>
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us FeedBack
                </a>
              </li>
              <li>
                <a
                  href="tel:800-574-7000">
                  <div
                    className="multi-line-item">
                    AT&T Customer Service: 
                    <phone>
                      <i
                        aria-hidden="true"
                        className="icon-phone-number" />
                      800-574-7000
                    </phone>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            className="mainnav-item grey logout"
            role="presentation">
            <a
              href="#"
              onClick={[Function anonymous]}>
              <i
                aria-hidden="true"
                className="icon-logout" />
              Log Out
            </a>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to User Dashboard"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="profile-header-dropdown"
              type="button">
              <i
                className="icon-profile" />
            </button>
            <ul
              aria-labelledby="profile-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-profile-nav"
              role="menu">
              <li
                className="desktop-profile-display"
                role="presentation">
                <a
                  className="deaden"
                  href="#profile"
                  id="pse-profile-desktop"
                  tabIndex="-1">
                  <div
                    className="multi-line-item">
                    <div
                      className="profile-display">
                      <i
                        aria-hidden="true"
                        className="icon-profile" />
                      undefined undefined
                    </div>
                  </div>
                </a>
              </li>
              <li
                role="presentation" />
              <li
                role="presentation">
                <a
                  href="#"
                  onClick={[Function anonymous]}>
                  <i
                    aria-hidden="true"
                    className="icon-logout" />
                  Log Out
                </a>
              </li>
            </ul>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to Help Center"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="help-header-dropdown"
              type="button">
              <i
                className="icon-help" />
            </button>
            <ul
              aria-labelledby="help-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-help-nav"
              role="menu">
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us Feedback
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className="tel-cell"
                  href="tel:800-574-7000">
                  AT&T Customer Service: 
                  <br />
                  <span>
                    <i
                      aria-hidden="true"
                      className="icon-phone-number" />
                    800-574-7000
                  </span>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="pageMask hidden-xs hidden-md hidden-lg"
    onClick={[Function anonymous]} />
</header>
`;

exports[`<PSEHeader /> render matches snapshot when menu is open 1`] = `
<header
  className="fnnav pse"
  role="banner">
  <div
    className="fnnav__mainbar open">
    <div
      className="container">
      <div
        className="fnnav__header">
        <div
          className="fnnav__brand">
          <a
            className="logo-home-link"
            href="/"
            onClick={[Function anonymous]}>
            <img
              alt="FirstNet Logo"
              src="/images/logo-FirstNet-local-control.svg" />
            <span
              className="sr-only">
              Go Home
            </span>
          </a>
        </div>
        <button
          aria-expanded={true}
          aria-haspopup="true"
          className="navbar-toggle"
          onClick={[Function anonymous]}
          type="button">
          <span
            className="sr-only">
            Toggle navigation
          </span>
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
          <span
            className="icon-bar" />
        </button>
      </div>
      <nav
        aria-label="Main Menu"
        id="main-menu">
        <ul
          className="fnnav__main">
          <li
            className="mainnav-item yellow"
            role="presentation">
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Profile Menu
              </span>
            </button>
            <a
              className="deaden"
              href="#profile"
              id="pse-profile">
              <div
                className="multi-line-item">
                <div
                  className="profile-display">
                  <i
                    aria-hidden="true"
                    className="icon-profile" />
                  undefined undefined
                </div>
              </div>
            </a>
            <ul
              aria-labelledby="pse-profile"
              className="collapse "
              id="pse-profile-nav">
              <li
                role="presentation" />
            </ul>
          </li>
          <li
            className="mainnav-item desktop-textlink"
            id="hdr-network-status"
            role="presentation">
            <a
              className={undefined}
              href="/network-status"
              id="linkBtn-networkStatus"
              onClick={[Function anonymous]}
              style={undefined}>
              Network Status
            </a>
          </li>
          <li
            className="mainnav-item grey">
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btnSubmenu"
              onClick={[Function anonymous]}>
              <span
                className="sr-only">
                Expand Help Menu
              </span>
            </button>
            <a
              className="deaden"
              href="/manage-profile"
              id="pse-profile">
              <i
                aria-hidden="true"
                className="icon-help" />
               Help
            </a>
            <ul
              aria-labelledby="linkBtn-admin"
              className="collapse "
              id="pse-help-menu">
              <li>
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li>
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us FeedBack
                </a>
              </li>
              <li>
                <a
                  href="tel:800-574-7000">
                  <div
                    className="multi-line-item">
                    AT&T Customer Service: 
                    <phone>
                      <i
                        aria-hidden="true"
                        className="icon-phone-number" />
                      800-574-7000
                    </phone>
                  </div>
                </a>
              </li>
            </ul>
          </li>
          <li
            className="mainnav-item grey logout"
            role="presentation">
            <a
              href="#"
              onClick={[Function anonymous]}>
              <i
                aria-hidden="true"
                className="icon-logout" />
              Log Out
            </a>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to User Dashboard"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="profile-header-dropdown"
              type="button">
              <i
                className="icon-profile" />
            </button>
            <ul
              aria-labelledby="profile-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-profile-nav"
              role="menu">
              <li
                className="desktop-profile-display"
                role="presentation">
                <a
                  className="deaden"
                  href="#profile"
                  id="pse-profile-desktop"
                  tabIndex="-1">
                  <div
                    className="multi-line-item">
                    <div
                      className="profile-display">
                      <i
                        aria-hidden="true"
                        className="icon-profile" />
                      undefined undefined
                    </div>
                  </div>
                </a>
              </li>
              <li
                role="presentation" />
              <li
                role="presentation">
                <a
                  href="#"
                  onClick={[Function anonymous]}>
                  <i
                    aria-hidden="true"
                    className="icon-logout" />
                  Log Out
                </a>
              </li>
            </ul>
          </li>
          <li
            className="desktop-iconItem dropdown">
            <button
              aria-expanded="false"
              aria-label="Go to Help Center"
              className="dropdown-toggle"
              data-toggle="dropdown"
              id="help-header-dropdown"
              type="button">
              <i
                className="icon-help" />
            </button>
            <ul
              aria-labelledby="help-header-dropdown"
              className="dropdown-menu dropdown-menu-right"
              id="pse-help-nav"
              role="menu">
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/faq"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  FAQ
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className={undefined}
                  href="/feedback"
                  onClick={[Function anonymous]}
                  style={undefined}>
                  Give Us Feedback
                </a>
              </li>
              <li
                role="presentation">
                <a
                  className="tel-cell"
                  href="tel:800-574-7000">
                  AT&T Customer Service: 
                  <br />
                  <span>
                    <i
                      aria-hidden="true"
                      className="icon-phone-number" />
                    800-574-7000
                  </span>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="pageMask hidden-xs hidden-md hidden-lg"
    onClick={[Function anonymous]} />
</header>
`;
